# BNB_Cplusplus

./: README.md
code/: CMakeLists.txt  bombtest.pro  command1.cpp  command1.h  main.cpp  readme.md  viewmodelcommand.cpp  viewmodelcommand.h
code/app/: bombapp.cpp  bombapp.h
code/common/: block.h  character.h  map.h  prop.h  weapon.h
code/resources/maps/: laserMap.txt  map.txt
code/view/: main.cpp  mainwindow.cpp  mainwindow.h  widget.cpp  widget.h
code/viewmodel/: commandviewmodel.cpp  commandviewmodel.h  viewmodel.cpp  viewmodel.h  viewmodelcommand.cpp  viewmodelcommand.h
code/viewmodel/command/: laser.cpp  laser.h  playercommand.cpp  playercommand.h  propcommand.cpp  propcommand.h
doc/: 中期报告.md  泡泡堂组初步计划.md  编译命令行.bat
